syntax = "proto3";

message QueryAppRequest {
    string app_id = 1;
    bool is_trash = 2;
}
message AppIdentifier {
    string app_id = 1;
}
